MM-51662 Add more information to help text for SVGs and Latex

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -661,7 +661,7 @@
   "admin.customization.enableGifPickerTitle": "Enable GIF Picker:",
   "admin.customization.enableInlineLatexDesc": "Enable rendering of inline Latex code. If false, Latex can only be rendered in a code block using syntax highlighting. Please review our <link>documentation</link> for details about text formatting.",
   "admin.customization.enableInlineLatexTitle": "Enable Inline Latex Rendering:",
-  "admin.customization.enableLatexDesc": "Enable rendering of Latex in code blocks. If false, Latex code will be highlighted only.",
+  "admin.customization.enableLatexDesc": "Enable rendering of Latex in code blocks. If false, Latex code will be highlighted only.\n\nEnabling Latex is not recommended in environments where not all users are trusted.",
   "admin.customization.enableLatexTitle": "Enable Latex Rendering:",
   "admin.customization.enableLinkPreviewsDesc": "Display a preview of website content, image links and YouTube links below the message when available. The server must be connected to the internet and have access through the firewall (if applicable) to the websites from which previews are expected. Users can disable these previews from Settings > Display > Website Link Previews.",
   "admin.customization.enableLinkPreviewsTitle": "Enable website link previews:",
@@ -669,7 +669,7 @@
   "admin.customization.enablePermalinkPreviewsTitle": "Enable message link previews:",
   "admin.customization.enablePublicSharedBoardsDesc": "This allows board editors to share boards that can be accessed by anyone with the link.",
   "admin.customization.enablePublicSharedBoardsTitle": "Enable Publicly-Shared Boards:",
-  "admin.customization.enableSVGsDesc": "Enable previews for SVG file attachments and allow them to appear in messages.",
+  "admin.customization.enableSVGsDesc": "Enable previews for SVG file attachments and allow them to appear in messages.\n\nEnabling SVGs is not recommended in environments where not all users are trusted.",
   "admin.customization.enableSVGsTitle": "Enable SVGs:",
   "admin.customization.gfycatApiKey": "Gfycat API Key:",
   "admin.customization.gfycatApiKeyDescription": "Request an API key at <link>https://developers.gfycat.com/signup/#</link>. Enter the client ID you receive via email to this field. When blank, uses the default API key provided by Gfycat.",
