fill empty translation

--- a/server/i18n/en.json
+++ b/server/i18n/en.json
@@ -4780,8 +4780,8 @@
     "translation": "Unable to get public channels."
   },
   {
-    "id": "app.channel.get_threads.app_error",
-    "translation": ""
+    "id": "app.channel.get_threads_for_channel.app_error",
+    "translation": "Unable to get the channel threads."
   },
   {
     "id": "app.channel.get_unread.app_error",
