[MM-51412] - In-product banner to communicate Cloud Free deprecation (#22622)
* [MM-51412] - In-product banner to communicate Cloud Free deprecation

* fix lint

* make improvements

* make improvements

* put banners behind feature flag

* cloud free overage case

* add unit tests

* feedback impl

* fix test

* rename and enable feature flag by default

* fix alert banner mode

* read end date from env var

* disable ff by default

* enter cloud free deprecation date

* remove env var

* fix text

---------

Co-authored-by: Mattermost Build <build@mattermost.com>

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -3031,6 +3031,11 @@
   "cloud_archived.error.access": "Permalink belongs to a message that has been archived because of {planName} limits. Upgrade to access message again.",
   "cloud_archived.error.title": "Message Archived",
   "cloud_billing_history_modal.title": "Invoice(s)",
+  "cloud_billing.nudge_to_paid.contact_sales": "Contact sales",
+  "cloud_billing.nudge_to_paid.description": "Cloud Free will be deprecated in {days} days. Upgrade to a paid plan or contact sales.",
+  "cloud_billing.nudge_to_paid.learn_more": "Upgrade",
+  "cloud_billing.nudge_to_paid.title": "Upgrade to paid plan to keep your workspace",
+  "cloud_billing.nudge_to_paid.view_plans": "View plans",
   "cloud_billing.nudge_to_yearly.contact_sales": "Contact sales",
   "cloud_billing.nudge_to_yearly.description": "Simplify your billing by switching to an annual subscription.",
   "cloud_billing.nudge_to_yearly.learn_more": "Learn more",
