--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -5255,7 +5255,10 @@
   "user_groups_modal.viewGroup": "View Group",
   "user_list.notFound": "No users found",
   "user_profile.account.editProfile": "Edit Profile",
+  "user_profile.account.hoursAhead": "({timeOffset} ahead)",
+  "user_profile.account.hoursBehind": "({timeOffset} behind)",
   "user_profile.account.localTime": "Local Time",
+  "user_profile.account.localTimeWithTimezone": "Local Time ({timezone})",
   "user_profile.account.post_was_created": "This post was created by an integration from",
   "user_profile.add_user_to_channel": "Add to a Channel",
   "user_profile.add_user_to_channel.icon": "Add User to Channel Icon",
