[MM-51475] - Monthly Subscriptions: Notifications to move to annual (#22842)
* [MM-51475] - Monthly Subscriptions: Notifications to move to annual

* change wording

* change banners impl

* fix translation

* rm env var

* fix tests

* rm unused consts

---------

Co-authored-by: Mattermost Build <build@mattermost.com>

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -3039,10 +3039,11 @@
   "cloud_billing.nudge_to_paid.learn_more": "Upgrade",
   "cloud_billing.nudge_to_paid.title": "Upgrade to paid plan to keep your workspace",
   "cloud_billing.nudge_to_paid.view_plans": "View plans",
+  "cloud_billing.nudge_to_yearly.announcement_bar": "Monthly billing will be discontinued in {days} days . Switch to annual billing",
   "cloud_billing.nudge_to_yearly.contact_sales": "Contact sales",
-  "cloud_billing.nudge_to_yearly.description": "Simplify your billing by switching to an annual subscription.",
+  "cloud_billing.nudge_to_yearly.description": "Monthly billing will be discontinued on {date}. To keep your workspace, switch to annual billing.",
   "cloud_billing.nudge_to_yearly.learn_more": "Learn more",
-  "cloud_billing.nudge_to_yearly.title": "Switch to an annual plan today",
+  "cloud_billing.nudge_to_yearly.title": "Action required: Switch to annual billing to keep your workspace.",
   "cloud_delinquency.banner.buttonText": "Update billing now",
   "cloud_delinquency.banner.end_user_notify_admin_button": "Notify admin",
   "cloud_delinquency.banner.end_user_notify_admin_title": "Your workspace has been downgraded. Notify your admin to fix billing issues",
