adding group to channel functionality along with add new team members

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -2899,6 +2899,20 @@
   "channel_info_rhs.top_buttons.muted": "Muted",
   "channel_invite.addNewMembers": "Add people to {channel}",
   "channel_invite.invite_guest": "Invite as a Guest",
+  "channel_invite.invite_team_members.button": "Add users to team",
+  "channel_invite.invite_team_members.button.adding": "Adding...",
+  "channel_invite.invite_team_members.error.message": "{count, plural, =1 {{firstUser} was} other {{users} and {lastUser} were}} not added to the {team} team. Please contact your system administrator to add them to the team.",
+  "channel_invite.invite_team_members.error.messageOverflow": "{firstUser} and {others} were not added to the {team} team. Please contact your system administrator to add them to the team.",
+  "channel_invite.invite_team_members.error.title": "Users could not be added to the team",
+  "channel_invite.invite_team_members.guests.message": "{count, plural, =1 {{firstUser} is a guest user} other {{users} and {lastUser} are guest users}} and will have to be invited to the team separately to add them to this channel.",
+  "channel_invite.invite_team_members.guests.messageOverflow": "{firstUser} and {others} are guest users and will have to be invited to the team separately to add them to this channel.",
+  "channel_invite.invite_team_members.message": "{count, plural, =1 {{firstUser} was} other {{users} and {lastUser} were}} not selected. Add them to the {team} team to add them to this channel.",
+  "channel_invite.invite_team_members.messageOthers": "{count} others",
+  "channel_invite.invite_team_members.messageOverflow": "{firstUser} and {others} were not selected. Add them to the {team} team to add them to this channel.",
+  "channel_invite.invite_team_members.success.message": "{count, plural, =1 {{firstUser} was} other {{users} and {lastUser} were}} added to the {team} team. You can now add them to this channel.",
+  "channel_invite.invite_team_members.success.messageOverflow": "{firstUser} and {others} were added to the {team} team. You can now add them to this channel.",
+  "channel_invite.invite_team_members.success.title": "{count, plural, =1 {1 user was} other {# users were}} added to the team",
+  "channel_invite.invite_team_members.title": "{count, plural, =1 {1 user was} other {# users were}} not selected because they are not a part of this team",
   "channel_invite.no_options_message": "No matches found - <InvitationModalLink>Invite them to the team</InvitationModalLink>",
   "channel_loader.posted": "Posted",
   "channel_loader.postedImage": " posted an image",
