[MM-51922] Enforce minimum 10 seats in seats selector (#22916)
* Enforce minimum 10 seats in seats selector

* Ensure initial value is validated as well

* Fix linter

* fix tests

* Add a test for 10 seat minimum

* Fix linter, merge master

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -3068,6 +3068,7 @@
   "cloud_delinquency.post_downgrade_banner.title": "Update your billing information now to re-activate paid features.",
   "cloud_signup.signup_consequences": "Your credit card will be charged today. <a>See how billing works.</a>",
   "cloud_subscribe.contact_support": "Compare plans",
+  "cloud_upgrade.error_min_seats": "Minimum of 10 seats required",
   "cloud.fetch_error": "Error fetching billing data. Please try again later.",
   "cloud.fetch_error.retry": "Retry",
   "cloud.invoice_pdf_preview.download": "<downloadLink>Download</downloadLink> this page for your records",
