[MM-51413] - Update Cloud pricing modal to remove mentions of Cloud Free (#22639)
* [MM-51413] - Update Cloud pricing modal to remove mentions of Cloud Free

* cleanup starter from pricing modal

* rm unused import

* enterprise button states

* fix purchase modal

* revert

* revert e2e

* revert

* revert

* revert

* revert

* revert

* revert

* add feature flag

* default FF to false

* revert

* fix feature flag self hosted checks

* add links

* feedback impl

* feedback impl

* fix lint

* feedback impl

* fix translation

* feedback impl

* feedback impl

* fix height

* improve alignment

---------

Co-authored-by: Mattermost Build <build@mattermost.com>

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4563,23 +4563,29 @@
   "pricing_modal.briefing.ssoWithGitLab": "SSO with Gitlab",
   "pricing_modal.briefing.storageStarter": "{storage} file storage limit",
   "pricing_modal.briefing.title": "Top features",
+  "pricing_modal.briefing.title_large_scale": "Large scale collaboration",
+  "pricing_modal.briefing.title_no_limit": "No limits on your team’s usage",
   "pricing_modal.briefing.unlimitedPlaybookRuns": "Unlimited playbooks and runs",
   "pricing_modal.briefing.unlimitedWorkspaceTeams": "Unlimited workspace teams",
   "pricing_modal.btn.contactSales": "Contact Sales",
   "pricing_modal.btn.contactSalesForQuote": "Contact Sales",
   "pricing_modal.btn.contactSupport": "Contact Support",
   "pricing_modal.btn.downgrade": "Downgrade",
+  "pricing_modal.btn.purchase": "Purchase",
   "pricing_modal.btn.switch_to_annual": "Switch to annual billing",
   "pricing_modal.btn.tooltip": "Only visible to system admins",
   "pricing_modal.btn.tryDays": "Try free for {days} days",
   "pricing_modal.btn.upgrade": "Upgrade",
   "pricing_modal.btn.viewPlans": "View plans",
+  "pricing_modal.contact_us": "Contact us",
   "pricing_modal.extra_briefing.cloud.free.calls": "Group calls of up to 8 people, 1:1 calls, and screen share",
   "pricing_modal.extra_briefing.enterprise.playBookAnalytics": "Playbook analytics dashboard",
   "pricing_modal.extra_briefing.free.calls": "Voice calls and screen share",
   "pricing_modal.extra_briefing.professional.guestAccess": "Guest access with MFA enforcement",
   "pricing_modal.extra_briefing.professional.ssoadLdap": "SSO support with AD/LDAP, Google, O365, OpenID",
   "pricing_modal.extra_briefing.professional.ssoSaml": "SSO with SAML 2.0, including Okta, OneLogin, and ADFS",
+  "pricing_modal.interested_self_hosting": "Interested in self-hosting?",
+  "pricing_modal.learn_more": "Learn more",
   "pricing_modal.lookingForCloudOption": "Looking for a cloud option?",
   "pricing_modal.lookingToSelfHost": "Looking to self-host?",
   "pricing_modal.noitfy_cta.request": "Request admin to upgrade",
@@ -4592,9 +4598,11 @@
   "pricing_modal.planLabel.mostPopular": "MOST POPULAR",
   "pricing_modal.planSummary.enterprise": "Administration, security, and compliance for large teams",
   "pricing_modal.planSummary.free": "Increased productivity for small teams",
-  "pricing_modal.planSummary.professional": "Scalable solutions for growing teams",
+  "pricing_modal.planSummary.professional": "Scalable solutions {br} for growing teams",
   "pricing_modal.price.freeForever": "Free forever",
+  "pricing_modal.questions": "Questions?",
   "pricing_modal.rate.seatPerMonth": "USD per seat/month {br}<b>(billed annually)</b>",
+  "pricing_modal.reach_out": "Reach out to us and we’ll help you decide which plan is right for you and your organization.",
   "pricing_modal.reviewDeploymentOptions": "Review deployment options",
   "pricing_modal.start_trial.disclaimer": "By selecting <span>Try free for 30 days,</span> I agree to the <linkAgreement>Mattermost Software and Services License Agreement</linkAgreement>, <linkPrivacy>Privacy Policy</linkPrivacy>, and receiving product emails.",
   "pricing_modal.subtitle": "Choose a plan to get started",
