--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4318,14 +4318,16 @@
   "notify_here.question": "By using **@here** you are about to send notifications to up to **{totalMembers} other people**. Are you sure you want to do this?",
   "notify_here.question_timezone": "By using **@here** you are about to send notifications to up to **{totalMembers} other people** in **{timezones, number} {timezones, plural, one {timezone} other {timezones}}**. Are you sure you want to do this?",
   "numMembers": "{num, number} {num, plural, one {member} other {members}}",
-  "onboarding_wizard.cloud_plugins.description": "Mattermost is better when integrated with the tools your team uses for collaboration. Popular tools are below, select the ones your team uses and we'll add them to your workspace. Additional set up may be needed later.",
-  "onboarding_wizard.cloud_plugins.subtitle": "(almost there!)",
-  "onboarding_wizard.cloud_plugins.title": "Welcome to Mattermost!",
+  "onboarding_wizard.invite_members_cloud.title": "Who works with you?",
   "onboarding_wizard.invite_members.copied_link": "Link Copied",
   "onboarding_wizard.invite_members.copy_link": "Copy Link",
   "onboarding_wizard.invite_members.copy_link_input": "team invite link",
+  "onboarding_wizard.invite_members.description": "Collaboration is tough by yourself. Invite a few team members. Separate each email address with a space or comma.",
   "onboarding_wizard.invite_members.description_link": "Collaboration is tough by yourself. Invite a few team members using the invitation link below.",
+  "onboarding_wizard.invite_members.next": "Send invites",
   "onboarding_wizard.invite_members.next_link": "Finish setup",
+  "onboarding_wizard.invite_members.placeholder": "Enter email addresses",
+  "onboarding_wizard.invite_members.skip": "Skip",
   "onboarding_wizard.invite_members.title": "Invite your team members",
   "onboarding_wizard.launching_workspace.description": "It’ll be ready in a moment",
   "onboarding_wizard.launching_workspace.title": "Launching your workspace now",
