snapshot and translation

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -5263,6 +5263,7 @@
   "user_groups_modal.allGroups": "All Groups",
   "user_groups_modal.archivedGroups": "Archived Groups",
   "user_groups_modal.archiveGroup": "Archive Group",
+  "user_groups_modal.button.restoreGroup": "Restore group",
   "user_groups_modal.createNew": "Create Group",
   "user_groups_modal.createTitle": "Create Group",
   "user_groups_modal.editDetails": "Edit Details",
@@ -5281,7 +5282,7 @@
   "user_groups_modal.myGroups": "My Groups",
   "user_groups_modal.name": "Name",
   "user_groups_modal.nameIsEmpty": "Name is a required field.",
-  "user_groups_modal.restoreGroup": "Restore group",
+  "user_groups_modal.restoreGroup": "Restore Group",
   "user_groups_modal.searchGroups": "Search Groups",
   "user_groups_modal.showAllGroups": "Show: All Groups",
   "user_groups_modal.showArchivedGroups": "Show: Archived Groups",
