--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -2908,16 +2908,16 @@
   "channel_invite.invite_guest": "Invite as a Guest",
   "channel_invite.invite_team_members.button": "Add users to team",
   "channel_invite.invite_team_members.button.adding": "Adding...",
-  "channel_invite.invite_team_members.error.message": "{count, plural, =1 {{firstUser} was} other {{users} and {lastUser} were}} not added to the {team} team. Please contact your system administrator to add them to the team.",
-  "channel_invite.invite_team_members.error.messageOverflow": "{firstUser} and {others} were not added to the {team} team. Please contact your system administrator to add them to the team.",
+  "channel_invite.invite_team_members.error.message": "{count, plural, =1 {{firstUser} was} other {{users} and {lastUser} were}} not added to the **{team}** team. Please contact your system administrator to add them to the team.",
+  "channel_invite.invite_team_members.error.messageOverflow": "{firstUser} and {others} were not added to the **{team}** team. Please contact your system administrator to add them to the team.",
   "channel_invite.invite_team_members.error.title": "Users could not be added to the team",
-  "channel_invite.invite_team_members.guests.message": "{count, plural, =1 {{firstUser} is a guest user} other {{users} and {lastUser} are guest users}} and will have to be invited to the team separately to add them to this channel.",
-  "channel_invite.invite_team_members.guests.messageOverflow": "{firstUser} and {others} are guest users and will have to be invited to the team separately to add them to this channel.",
-  "channel_invite.invite_team_members.message": "{count, plural, =1 {{firstUser} was} other {{users} and {lastUser} were}} not selected. Add them to the {team} team to add them to this channel.",
+  "channel_invite.invite_team_members.guests.message": "{count, plural, =1 {{firstUser} is a guest user and needs} other {{users} and {lastUser} are guest users and need}} to first be invited to the team before you can add them to the channel. Once they've joined the team, you can add them to this channel.",
+  "channel_invite.invite_team_members.guests.messageOverflow": "{firstUser} and {others} are guest users and need to first be invited to the team before you can add them to the channel. Once they've joined the team, you can add them to this channel.",
+  "channel_invite.invite_team_members.message": "You can add {count, plural, =1 {{firstUser}} other {{users} and {lastUser}}} to this channel once they are members of the **{team}** team.",
   "channel_invite.invite_team_members.messageOthers": "{count} others",
-  "channel_invite.invite_team_members.messageOverflow": "{firstUser} and {others} were not selected. Add them to the {team} team to add them to this channel.",
-  "channel_invite.invite_team_members.no_permission.message": "{count, plural, =1 {{firstUser} was} other {{users} and {lastUser} were}} not selected. Please contact your system administrator to add them to the {team} team before you can add them to this channel.",
-  "channel_invite.invite_team_members.no_permission.messageOverflow": "{firstUser} and {others} were not selected. Please contact your system administrator to add them to the {team} team before you can add them to this channel.",
+  "channel_invite.invite_team_members.messageOverflow": "You can add {firstUser} and {others} to this channel once they are members of the **{team}** team.",
+  "channel_invite.invite_team_members.no_permission.message": "{count, plural, =1 {{firstUser} was} other {{users} and {lastUser} were}} not selected. Please contact your system administrator to add them to the **{team}** team before you can add them to this channel.",
+  "channel_invite.invite_team_members.no_permission.messageOverflow": "{firstUser} and {others} were not selected. Please contact your system administrator to add them to the **{team}** team before you can add them to this channel.",
   "channel_invite.invite_team_members.success.message": "{count, plural, =1 {{firstUser} was} other {{users} and {lastUser} were}} added to the {team} team. You can now add them to this channel.",
   "channel_invite.invite_team_members.success.messageOverflow": "{firstUser} and {others} were added to the {team} team. You can now add them to this channel.",
   "channel_invite.invite_team_members.success.title": "{count, plural, =1 {1 user was} other {# users were}} added to the team",
@@ -4232,6 +4232,7 @@
   "multiselect.numPeopleRemaining": "Use ↑↓ to browse, ↵ to select. You can add {num, number} more {num, plural, one {person} other {people}}. ",
   "multiselect.numRemaining": "Up to {max, number} can be added at a time. You have {num, number} remaining.",
   "multiselect.placeholder": "Search for people",
+  "multiselect.placeholder.peopleOrGroups": "Search for people or groups",
   "multiselect.saveDetailsButton": "Save Details",
   "multiselect.savingDetailsButton": "Saving...",
   "multiselect.selectChannels": "Use ↑↓ to browse, ↵ to select.",
