--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -5720,6 +5720,19 @@
   "widgets.users_emails_input.loading": "Loading",
   "widgets.users_emails_input.no_user_found_matching": "No one found matching **{text}**. Enter their email to invite them.",
   "widgets.users_emails_input.valid_email": "Add **{email}**",
+  "work_templates.channel_only.title": "Create a new channel",
+  "work_templates.channel_only.what": "Channels allow you to organize conversations, tasks and content in one convenient place.",
+  "work_templates.channel_only.try_template": "Try a template",
+  "work_templates.channel_only.cancel": "Cancel",
+  "work_templates.channel_only.confirm": "Create channel",
+  "work_templates.mode.new": "New",
+  "work_templates.mode.templates": "Templates",
+  "work_templates.mode.templates_new": "New",
+  "work_templates.mode.templates_new": "New",
+  "work_templates.mode.tourtip_title": "Try one of our templates",
+  "work_templates.mode.tourtip_what": "Our templates cover a variety of use cases and include critical tools.",
+  "work_templates.mode.tourtip_why": "Use them to define your channel's purpose and set your team up for success.",
+  "work_templates.mode.tourtip_cta": "Select a template",
   "work_templates.customize.modal_cancel_button": "Back",
   "work_templates.customize.modal_create_button": "Create",
   "work_templates.customize.modal_title": "Name your {useCase}",
