[MM-51805  + MM-51806 + MM-51041] Work template: multiple UI fixes (#22862)
(cherry picked from commit feab1bf61bbbd845925add8d489bf02123fa71d6)

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -5763,6 +5763,9 @@
   "work_templates.preview.integrations.admin_install.multiple_plugin": "Integrations will not be added until admin installs them.",
   "work_templates.preview.integrations.admin_install.notify": "Notify admin to install integrations",
   "work_templates.preview.integrations.admin_install.single_plugin": "{plugin} will not be added until admin installs it.",
+  "work_templates.preview.integrations.already_installed": "Already installed",
+  "work_templates.preview.integrations.app_install": "App Install",
+  "work_templates.preview.integrations.to_be_installed": "To be installed",
   "work_templates.preview.modal_cancel_button": "Back",
   "work_templates.preview.modal_next_button": "Next",
   "work_templates.preview.modal_title": "Preview {useCase}",
